<resources>
    <string name="app_name">Starwars</string>
    <string name="action_settings">Settings</string>
    <string name="action_people">People</string>
    <string name="action_planet">Planets</string>
    <string name="action_info">Info</string>
    <string name="action_spices">Species</string>
    <string name="action_vehicle">Vehicles</string>
    <string name="action_starship">Starships</string>
    <string name="action_film">Films</string>
</resources>
