<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/yellow"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                android:title="Collapsing Toolbar"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    </android.support.v7.widget.RecyclerView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_search_category_default"
        app:layout_anchor="@id/recyclerView"
        app:layout_anchorGravity="bottom|right|end" />


    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/dgrey"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="top">

        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lmargin_3"
            android:background="@color/colorAccent"
            android:padding="@dimen/lmargin_10"
            android:text="@string/action_info"
            android:textColor="@color/white" />

        <Button

            android:id="@+id/btn_planet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lmargin_3"
            android:background="@color/colorAccent"
            android:padding="@dimen/lmargin_10"
            android:text="@string/action_planet"
            android:textColor="@color/white" />

        <Button
            android:layout_margin="@dimen/lmargin_3"
            android:id="@+id/btn_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="@dimen/lmargin_10"
            android:text="@string/action_spices"
            android:textColor="@color/white" />

        <Button
            android:layout_margin="@dimen/lmargin_3"
            android:id="@+id/btn_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="@dimen/lmargin_10"
            android:text="@string/action_people"
            android:textColor="@color/white" />

        <Button
            android:layout_margin="@dimen/lmargin_3"
            android:id="@+id/btn_starship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="@dimen/lmargin_10"
            android:text="@string/action_starship"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_vehicle"
            android:layout_margin="@dimen/lmargin_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/lmargin_10"
            android:text="@string/action_vehicle"
            android:background="@color/colorAccent"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_films"
            android:layout_margin="@dimen/lmargin_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/lmargin_10"
            android:text="@string/action_film"  android:background="@color/colorAccent"
            android:textColor="@color/white" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>

